src/test/deca/context/invalid/created/wrongTypes/wrong_type_condition_while_INT.deca
// Description:
//  Condition non boolean
// 
// Resultats:
//    Ligne 9 : mismatched input 'else' expecting 
{
    while (56) {
        println("true");
    } else {
        println("false");
    }
}